name: Book
version: 0.1.0.0
license-file: LICENSE
author: Me
maintainer: Me
category: Text
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules: Hangman
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5
                , checkers
                , hspec
                , QuickCheck
                , random
  hs-source-dirs: .
  default-language: Haskell2010
